<resources>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="main_user_db_location">users/</string>
    <string name="main_user_db_contact_location">contacts</string>
    <string name="thumbnail_galery_db_location">images/Gallery</string>
    <string name="thumbnail_GroupImages_db_location">images/GroupImages</string>
    <string name="storage_large_gallery">Gallery</string>
    <string name="storage_group_images">GroupImages</string>
    <string name="storage_thumbnails_gallery">thumbnails/Gallery</string>
    <string name="storage_thumbnails_group_images">thumbnails/GroupImages</string>
    <string name="main_user_db_measurement_location">measurement</string>
    <string name="app_name">HandMade by Ella</string>
    <string name="nav_header_title">HandMade by Ella</string>
    <string name="nav_email">sweetella1978@yahoo.com</string>
    <string name="nav_email_type">text/plain</string>
    <string name="nav_email_intent">Send mail...</string>
    <string name="nav_email_mailto">mailto:sweetella1978@yahoo.com</string>
    <string name="nav_email_subject">Friendly Message from HandMade by Ella</string>
    <string name="nav_email_text">Friendly Message from HandMade by Ella</string>
    <string name="nav_email_message_hint">Email message goes here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_ella">Email Ella</string>
    <string name="share_app">Share App</string>
    <string name="share_text">Try the Hand Made by Ella App in the google app store</string>
    <string name="share_type">text/plain</string>
    <string name="sign_in">sign in</string>
    <string name="gallery">Gallery</string>
    <string name="manage_images">Upload Images</string>
    <string name="about_us">About Ella</string>
    <string name="communicate">Communicate</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="add_contact">Add / Edit Client Info</string>
    <string name="display_contact">Display Client Info</string>
    <string name="contact">Clients</string>
    <string name="client_first_name">First Name</string>
    <string name="client_middle_name">Middle Name</string>
    <string name="client_last_name">Last Name</string>
    <string name="client_email">Email Address</string>
    <string name="client_phone_number">Phone Number</string>
    <string name="client_address">Address</string>
    <string name="add_f_measurement">Add / Edit female Measurement</string>
    <string name="add_m_measurement">Add / Edit male Measurement</string>
    <string name="add_female">Add female measurements</string>
    <string name="add_male">Add male measurements</string>
    <string name="display_female">Show female measurements</string>
    <string name="display_male">Show male measurements</string>
    <string name="client_info">Insert Client Info</string>
    <string name="measurement">Inches</string>
    <string name="chest">Chest - Measured under the arms</string>
    <string name="waist_male">Waist - Measured slightly below the navel</string>
    <string name="hips_male">Hips/Seat - Measured approximately 6” below the waist</string>
    <string name="rise">Rise - The difference between the outseam and the inseam</string>
    <string name="length_male">Length, Neck to Waist - Measured down the spine</string>
    <string name="inseam_male">Inseam - Measured from crotch to floor, on the inside of the leg</string>
    <string name="outseam">Outseam - Measured on the side from waist to floor, on the outside of the leg</string>
    <string name="neck">Neck - Taken around neck</string>
    <string name="front_width">Front Width - Taken across from arm crease to arm crease</string>
    <string name="high_bust">High Bust - Taken around the body above the bust and high under the arms</string>
    <string name="bust">Bust (chest) - Measured at the nipple line</string>
    <string name="full_front_width">Full Front Width - Taken side seam to side seam across full bust</string>
    <string name="waist">Waist - Measured at the narrowest point</string>
    <string name="high_hip">High Hip - Usually 3”-3 &#189;” below waist at fullest part of tummy</string>
    <string name="hips">Hips - Measured at the broadest (largest) point</string>
    <string name="thigh">Thigh - Fullest part of upper leg</string>
    <string name="knee">Knee</string>
    <string name="calf">Calf</string>
    <string name="ankle">Ankle</string>
    <string name="length_neck_to_waist">Length (neck to waist) - Measured down the spine</string>
    <string name="length_waist_to_floor">Length (waist to desired finished distance from floor) - Measured down the spine</string>
    <string name="inseam">Inseam - Measured from the crotch to desired finished distance from floor</string>
    <string name="crotch_depth">Crotch Depth - Measured seated, on the side, from seat to waist</string>
    <string name="armscye">Armscye Depth - the opening for your arm </string>
    <string name="shoulder_elbow">Shoulder Elbow - Taken with arm bent and hand resting between waist and hip</string>
    <string name="elbow_wrist">Elbow Wrist</string>
    <string name="bicep">Bicep - Fullest part of upper arm</string>
    <string name="wrist">Wrist - Taken around prominent wrist bone</string>
    <string name="back_waist_length">Back Waist Length - Taken from prominent bone at base of neck to waist</string>
    <string name="cross_back_width">Cross Back Width - Taken approximately 4” below base of neck across back from armhole to armhole</string>
    <string name="full_back_width">Full Back Width - Taken across back from side seam to side seam</string>
    <string name="waist_knee">Waist to knee (hem) - Lengths will vary according to styles</string>
    <string name="waist_calf">Waist to calf</string>
    <string name="waist_ankle">Waist to ankle</string>
    <string name="waist_floor">Waist to floor</string>
    <string name="blank_text"></string>
    <string name="space_text"> </string>
    <string name="title_activity_storage">Upload Images</string>
    <string name="error_message">There was an error getting the data. Please check your internet
        connection and try again.</string>
    <string name="img_description">This is movie poster</string>
    <string name="uploadedImageTitle">Image Title</string>
    <string name="hint_image_title">Enter image title</string>
    <string name="hint_date">Enter date photo taken</string>
    <string name="hint_order">Enter the number order group pic to be shown</string>
    <string name="hint_group_name">Enter the name of the group object</string>
    <string name="hint_notes">Enter the otes to be shown to user</string>
    <string name="date">Date :</string>
    <string name="group">Group :</string>
    <string name="group_order">Group Order :</string>
    <string name="group_name">Group Name :</string>
    <string name="notes">Notes :</string>
    <string name="button_choose">Choose Image</string>
    <string name="button_upload">Upload</string>
    <string name="lorem_ipsum1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus imperdiet lorem in pharetra molestie. Nunc euismod elit libero, ut bibendum nunc scelerisque et. Phasellus rutrum nisl eu sem hendrerit, efficitur tincidunt elit facilisis. Curabitur eget erat nec dolor consectetur faucibus sit amet eu tortor. Donec pharetra nisi sit amet lacus malesuada mollis. Fusce porta eget ante nec pulvinar. Sed et nulla ac risus euismod mattis a gravida libero. Suspendisse fermentum ornare purus non sollicitudin. Morbi suscipit eros massa, in commodo velit convallis at. Etiam posuere risus nec efficitur sodales. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin maximus non nunc a interdum. Cras hendrerit sit amet odio malesuada. Mauris volutpat lectus nulla, a lobortis purus eleifend vitae. Aliquam erat volutpat. </string>
    <string name="lorem_ipsum2">Aliquam nec eros id est posuere lacinia ornare a odio. Duis neque mauris, scelerisque vitae finibus sed, dapibus ac risus. Phasellus ut eros in odio tempor accumsan id a quam. Duis non tincidunt enim, in vehicula nisl. Vestibulum ultrices pulvinar arcu at accumsan. Nullam tincidunt ligula velit, id faucibus augue eleifend non. Phasellus finibus accumsan lacus vitae dapibus. Suspendisse ut ipsum in purus porttitor commodo. Quisque vitae sodales eros, eget euismod magna. Morbi rhoncus urna sed gravida aliquet. Aenean venenatis viverra sem, malesuada interdum odio volutpat id. Nulla tristique dui enim, quis aliquam leo porttitor at. </string>
    <string name="lorem_ipsum3">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum sed mauris tortor. Nunc congue blandit lacus, quis pretium nunc. Integer tempus arcu eget metus luctus finibus. Cras non semper nulla, non faucibus nisi. Vestibulum dignissim felis nulla, non malesuada ex aliquet quis. In hac habitasse platea dictumst. Phasellus vestibulum nibh luctus, consequat metus id, pellentesque magna. Donec lorem justo, pharetra at mauris non, posuere maximus nibh. Vestibulum ac ipsum non felis porta volutpat vel sed dui. Quisque viverra consequat neque ut varius. Donec sed ipsum est. Sed tincidunt leo eget nisl lacinia, quis suscipit justo venenatis. Integer ultricies purus neque, quis sagittis erat fermentum ut. Vivamus nec risus neque. Cras sagittis at dolor vel aliquam. </string>
    <string name="lorem_ipsum4">Sed fermentum lectus eget sapien ullamcorper egestas. Donec pretium eleifend velit. Proin ut ultricies dolor. Ut tempor, felis a accumsan maximus, justo mauris lacinia lorem, ac commodo eros metus non tellus. Fusce rutrum scelerisque mauris, quis finibus tellus. Sed eu ante congue, vulputate ex sed, ornare neque. Praesent id leo nibh. Sed sollicitudin rhoncus odio sit amet consequat. Phasellus faucibus tincidunt nisi, non condimentum tortor sagittis eget. Cras a gravida mauris, sed gravida lorem. In dapibus eros ligula, sed vulputate sem imperdiet sed. Nam pellentesque semper felis eget dignissim. Nulla cursus nec nisl quis consectetur.</string>
    <string name="lorem_ipsum5">Integer ultrices neque tincidunt ultrices placerat. Vestibulum congue ut velit at feugiat. Vestibulum dignissim ultrices sollicitudin. Fusce accumsan ligula id faucibus tristique. Integer pharetra sit amet eros vel maximus. Nunc suscipit turpis sed tortor convallis fermentum vitae a orci. Suspendisse faucibus dictum est, non commodo nulla bibendum in. Quisque lorem mauris, posuere eget nisl a, consectetur consequat arcu. Vestibulum finibus metus id diam lobortis, sit amet lobortis nisi tempor. Fusce faucibus nisl nec leo placerat, ut facilisis quam elementum. Nunc sit amet commodo urna. In gravida tellus et nunc bibendum, eget venenatis ex lacinia. </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="confirm_message">Are you sure that you want to delete</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="fab_save_client">Hit this button to Save the client</string>
    <string name="fab_save_image">Hit this button to Add an image</string>
    <string name="fab_add_client">Hit this button to Add a client</string>
    <string name="toast_file_uploaded">File Uploaded </string>
    <string name="toast_uploaded"> Uploaded </string>
</resources>