<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2018 Kurt Wanliss

  All rights reserved under the copyright laws of the United States
  and applicable international laws, treaties, and conventions.

  You may freely redistribute and use this sample code, with or
  without modification, provided you include the original copyright
  notice and use restrictions.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:id="@+id/nav_drawer"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/about_us" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/admin">
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/manage_images" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_mail_black_24dp"
                android:title="@string/email_ella" />
        </menu>
    </item>

    <item android:title="@string/login">
        <menu>
            <item
                android:id="@+id/nav_sign_in"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/sign_in" />

        </menu>
    </item>

</menu>
