<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2018 Kurt Wanliss

  All rights reserved under the copyright laws of the United States
  and applicable international laws, treaties, and conventions.

  You may freely redistribute and use this sample code, with or
  without modification, provided you include the original copyright
  notice and use restrictions.
-->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UploadImageActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/uplaad_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:weightSum="100">

                    <LinearLayout
                        android:id="@+id/ImgLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:adjustViewBounds="true"
                            android:background="@drawable/image_boarder"
                            android:contentDescription="@string/img_description" />
                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/inputTextLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:labelFor="@id/imageTitle"
                            android:text="@string/uploadedImageTitle" />

                        <EditText
                            android:id="@+id/imageTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_toEndOf="@id/tvTitle"
                            android:autofillHints="@string/hint_image_title"
                            android:ems="5"
                            android:inputType="textPersonName"
                            android:text="" />

                        <TextView
                            android:id="@+id/date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:layout_toEndOf="@id/imageTitle"
                            android:labelFor="@id/pic_date"
                            android:text="@string/date" />

                        <EditText
                            android:id="@+id/pic_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_toEndOf="@id/date_label"
                            android:autofillHints="@string/hint_date"
                            android:ems="5"
                            android:focusable="false"
                            android:inputType="date" />

                        <Switch
                            android:id="@+id/group_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pic_date"
                            android:layout_marginTop="16dp"
                            android:text="@string/group" />


                        <TextView
                            android:id="@+id/group_order_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pic_date"
                            android:layout_marginTop="24dp"
                            android:layout_toEndOf="@id/group_switch"
                            android:labelFor="@id/order_text"
                            android:text="@string/group_order"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/order_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pic_date"
                            android:layout_marginTop="16dp"
                            android:layout_toEndOf="@id/group_order_label"
                            android:autofillHints="@string/hint_order"
                            android:ems="2"
                            android:inputType="number"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/group_name_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/order_text"
                            android:layout_marginTop="24dp"
                            android:labelFor="@id/group_name"
                            android:text="@string/group_name"
                            android:visibility="gone" />

                        <EditText
                            android:id="@+id/group_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/order_text"
                            android:layout_marginTop="16dp"
                            android:layout_toEndOf="@id/group_name_label"
                            android:autofillHints="@string/hint_group_name"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text=""
                            android:visibility="gone" />


                        <TextView
                            android:id="@+id/notes_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/group_switch"
                            android:layout_marginTop="24dp"
                            android:labelFor="@id/notes"
                            android:text="@string/notes" />

                        <EditText
                            android:id="@+id/notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/group_switch"
                            android:layout_toEndOf="@id/notes_label"
                            android:autofillHints="@string/hint_notes"
                            android:gravity="top|start"
                            android:inputType="textMultiLine"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="6"
                            android:scrollbars="vertical" />

                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/linearLayout"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonChoose"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/button_choose" />

                        <Button
                            android:id="@+id/buttonUpload"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/button_upload" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_dialog_email" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>
